--- a/ai-model-app/package.json
+++ b/ai-model-app/package.json
@@ -10,6 +10,7 @@
     "format": "biome format --write"
   },
   "dependencies": {
+    "@google/genai": "^1.41.0",
     "@huggingface/transformers": "^3.8.1",
     "animate.css": "^4.1.1",
     "lucide-react": "^0.563.0",
