--- a/ai-model-backend/package.json
+++ b/ai-model-backend/package.json
@@ -1,6 +1,11 @@
 {
   "dependencies": {
     "@google/genai": "^1.41.0",
-    "@huggingface/transformers": "^3.8.1"
+    "@huggingface/transformers": "^3.8.1",
+    "express": "^5.2.1"
+  },
+  "devDependencies": {
+    "@types/express": "^5.0.6",
+    "@types/node": "^25.2.3"
   }
 }
